toml-pretty-deser/compilation_failure_tests/tagged_enum_root.stderr
error: custom attribute panicked
 --> compilation_failure_tests/tagged_enum_root.rs:8:1
  |
8 | #[tpd(root, tag="kind")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Failed to parse 'root, tag="kind"'
